// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usersReducer test suite add user test suite should add another user 1`] = `
Object {
  "1": Object {
    "active": false,
    "id": "1",
    "userName": "jimi",
  },
  "active": false,
  "id": "2",
  "userName": "leah",
}
`;

exports[`usersReducer test suite add user test suite should add first user 1`] = `
Object {
  "active": false,
  "id": "1",
  "userName": "jimi zax",
}
`;

exports[`usersReducer test suite defaults should return default state 1`] = `Object {}`;

exports[`usersReducer test suite set user active test suite should activate user 1`] = `
Object {
  "1": Object {
    "active": true,
    "id": "1",
    "userName": "jimi",
  },
  "2": Object {
    "active": false,
    "id": "2",
    "userName": "leah",
  },
}
`;

exports[`usersReducer test suite set user active test suite should deactivate user 1`] = `
Object {
  "1": Object {
    "active": false,
    "id": "1",
    "userName": "jimi",
  },
  "2": Object {
    "active": false,
    "id": "2",
    "userName": "leah",
  },
}
`;
